...
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/blue_background"
                android:src="@drawable/location"
                android:padding="10dp" />
            <Button
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Map View"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryPink"
                />
            <TextView
                android:layout_width="wrap_content"
...
