<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:src="@drawable/cat_placeholder" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>