<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaseActivity">

    <EditText
        android:id="@+id/multiLineNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/hintForCase"
        android:inputType="textMultiLine" />

</RelativeLayout>