...
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_scs">scsActivity</string>
    <string name="hintForCase">Full name \n\nNRIC/FIN \n\nContact Number \n\nNumber of Cats \n\nSex of the Cats \n\nArea where Cat was Spotted </string>
    <string name="tab_text_1">General Information</string>
    <string name="tab_text_2">More Information</string>
    <string name="tab_text_3">Add Cases</string>
    <string name="IntroToSCS"><![CDATA[The Stray Cat Sterilisation Programme is a new collaborative venture between the SPCA and AVS (Animal & Veterinary Service) which aims to further reduce the number of stray cats in Housing and Development Board (HDB) estates]]></string>
    <string name="InfoForFeeders">Community cat feeders can contact the SPCA at <b>62875355</b> (extension 14) to make an appointment.
        \n\n
        Please have the following information ready when you call:
        \n\n <b>Full name</b>, <b>address</b>, <b>NRIC/ FIN</b> number and <b>contact number</b> of community caregiver
        \n\n <b>Number</b> of cats needing to be sterilised
...
